# llm-web-index

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  API_TESTS_SUMMARY.md  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  TEST_STATUS.md  TODO  docker-compose.ghcr.yml  docker-compose.test.yml  docker-compose.yml  justfile  make_password_and_export_env.sh  make_tls_cert.sh  query_job_state.sh  query_llms_txt.sh  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.sqlx/: query-49394421f4a4426ee9b100def808a5622f074f7c6008262fdff6049220dbbd93.json  query-52140fa560302f3db7dbd9df31eb263b302891fee8ced0cbbdb6e2e24d815db6.json  query-79bc8b960af1de6fe6dcd73c4baf8a4bbf5efc1df84ae6cdfbeb280ed9a23472.json  query-8f41cbb13608b7aacd5ac3b5b3c456d562287b160a08e005c8aee70c03fef16b.json  query-b65cb4c522cf7dc1c2c8222a81337ceae0fe927c646a62e1374d6b63ecf8d647.json  query-eebbb005fb57a6fe64b2665824d8060c7b4e21e2edca2ff2ecae1675eb577d66.json
scripts/: remove_test_db.sh  run_all_tests.sh  serve_local.sh  setup_test_db.sh
src/api-ltx/: .env  Cargo.toml  README.md  SETUP.md  entrypoint.sh  setup_sqlx.sh
src/api-ltx/migrations/2026-01-02-000001_create_job_tables/: up.sql
src/api-ltx/migrations/2026-01-13-000002_add_html_checksum/: down.sql  up.sql
src/api-ltx/migrations/2026-01-27-000001_initial_schema/: up.sql
src/api-ltx/src/: db.rs  main.rs  models.rs  schema.rs
src/api-ltx/src/auth/: handlers.rs  middleware.rs  mod.rs  password.rs  session.rs
src/api-ltx/src/routes/: job_state.rs  llms_txt.rs  logging_middleware.rs  mod.rs
src/api-ltx/tests/: routes_test.rs
src/api_ltx/: Cargo.toml  SETUP.md  entrypoint.sh
src/api_ltx/migrations/00000000000000_diesel_initial_setup/: down.sql
src/api_ltx/migrations/2024-01-01-000000_create_names/: up.sql
src/api_ltx/migrations/2026-01-02-000001_create_job_state/: down.sql  up.sql
src/api_ltx/migrations/2026-01-02-000001_create_job_tables/: down.sql  up.sql
src/api_ltx/migrations/2026-01-02-000002_create_llms_txt/: down.sql  up.sql
src/api_ltx/migrations/2026-01-02-000003_add_enum_types/: down.sql  up.sql
src/api_ltx/migrations/2026-01-02-000004_convert_to_enums/: down.sql  up.sql
src/api_ltx/src/: db.rs  main.rs  models.rs  schema.rs
src/api_ltx/src/routes/: job_state.rs  llms_txt.rs  mod.rs
src/cli_ltx/: Cargo.toml
src/common-ltx/: Cargo.toml
src/common-ltx/src/: lib.rs
src/common_ltx/src/: lib.rs
src/core-ltx/: 5.2--llms.txt  5mini--llms.txt  5nano--llms.txt  Cargo.toml  LOG_SUCCESS  README.md  sherwin-5-mini-llms.txt  sherwin-5-nano-llms.txt  sherwin-5.2-llms.txt
src/core-ltx/src/: errors.rs  lib.rs  llms_txt_gen.rs  main.rs  markdown.rs  md_llm_txt.rs  web_html.rs
src/core-ltx/src/common/: auth_config.rs  compression.rs  db.rs  db_env.rs  env_check.rs  health.rs  hostname.rs  logging.rs  max_concurrency.rs  mod.rs  poll_interval.rs  tls_config.rs
src/core-ltx/src/functional/: macros.rs  mod.rs
src/core-ltx/src/llms/: chatgpt.rs  mock.rs  mod.rs  prompts.rs
src/core-ltx/src/rule_gen/: batch.rs  config.rs  errors.rs  fetch.rs  generator.rs  html.rs  mod.rs  text_utils.rs  url_utils.rs
src/core_ltx/: Cargo.toml  build.rs
src/core_ltx/src/: lib.rs  main.rs
src/cron-ltx/: Cargo.toml  README.md
src/cron-ltx/src/: auth_client.rs  errors.rs  lib.rs  main.rs  process.rs
src/data-model-ltx/: Cargo.toml  README.md
src/data-model-ltx/src/: db.rs  lib.rs  models.rs  schema.rs  test_helpers.rs  web_html.rs
src/front-ltx/: Cargo.toml  README.md
src/front-ltx/src/: auth.rs  lib.rs
src/front-ltx/www/: index.html
src/front_ltx/: .gitignore  Cargo.toml  README.md
src/front_ltx/src/: lib.rs
src/front_ltx/www/: index.html
src/worker-ltx/: Cargo.toml  README.md
src/worker-ltx/src/: errors.rs  lib.rs  main.rs  work.rs
src/worker-ltx/tests/: job_processing.rs  job_queue.rs  result_handling.rs
src/worker_ltx/: Cargo.toml
