[workspace]
resolver = "2"
members = [
    "src/core-ltx",    # Functional core: all llms.txt generation logic + CLI program for one-offs (generation + update).
    "src/api-ltx",     # API webserver + DB setup.
    "src/cli-ltx",     # CLI client for users: interfaces with API.
    "src/front-ltx",   # Webapp frontend for users: interfaces with API.
    "src/worker-ltx",  # Backend worker executing logic (generation + update) from API sever into database.
    "src/cron-ltx",    # Cron worker service to perodically update websites' llms.txt.
    "src/common-ltx"   # Catch-all for utilities common to all crates.
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Malcolm Greaves <75upbeats_hybrids@icloud.com>"]
license = "Mozilla Public License 2.0"
readme = "README.md"

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
