[workspace]
resolver = "2"
members = [
    "src/core-ltx",       # Functional core: all llms.txt generation logic + CLI program for one-offs (generation + update).
    "src/api-ltx",        # API webserver + DB setup.
    "src/front-ltx",      # Webapp frontend for users: interfaces with API.
    "src/worker-ltx",     # Backend worker executing logic (generation + update) from API sever into database.
    "src/cron-ltx",       # Cron worker service to perodically update websites' llms.txt.
    "src/data-model-ltx", # The application's data model.
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Malcolm Greaves <75upbeats_hybrids@icloud.com>"]
license = "Mozilla Public License 2.0"
readme = "README.md"

[workspace.dependencies]
# Web framework & server
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }

# Authentication & TLS
bcrypt = "0.15"
cookie = "0.18"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
rcgen = "0.13"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
md5 = "0.7"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Node",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
serde-wasm-bindgen = "0.6"

# Core-ltx specific dependencies
async-openai = "0.28"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
markdown-ppp = "2.8.1"
pulldown-cmark = "0.12"
indoc = "2.0.7"
nom = "8.0.0"
reqwest = "0.13.1"
html5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
async-trait = "0.1.89"
subst = "0.3.8"

# Test dependencies
test-with = { version = "*", features = ["runtime"] }
libtest-with = "0.8.1-12"
