[package]
name = "api-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "API webserver + DB setup."

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
deadpool = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
# authentication
bcrypt = "0.15"
cookie = "0.18"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
thiserror = "2.0"
# internal
data-model-ltx = { path = "../data-model-ltx" }
core-ltx = { path = "../core-ltx" }
