[package]
name = "api-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "API webserver + DB setup."

[dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
cookie = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
thiserror = { workspace = true }
# internal
data-model-ltx = { path = "../data-model-ltx" }
core-ltx = { path = "../core-ltx" }

[dev-dependencies]
data-model-ltx = { path = "../data-model-ltx", features = ["test-helpers"] }
http-body-util = "0.1.2"
urlencoding = "2.1"

[[bin]]
name = "generate-password-hash"
path = "src/bin/generate-password-hash.rs"

[[bin]]
name = "generate-tls-cert"
path = "src/bin/generate-tls-cert.rs"
