[package]
name = "api-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "API webserver + DB setup."

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
r2d2 = "0.8.10"
