[package]
name = "core-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Functional core: all llms.txt generation logic + CLI program for one-offs (generation + update)."
build = "build.rs"
readme = "README.md"

[dependencies]
async-openai = "0.28"
tokio = { version = "1.42", features = ["rt", "macros"] }
common-ltx = { path = "../common-ltx" }
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
markdown-ppp = "2.8.1"
indoc = "2.0.7"
nom = "8.0.0"
reqwest = "0.13.1"
html5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt", "macros", "rt-multi-thread"] }
test-with = { version = "*", features = ["runtime"] }
libtest-with = "0.8.1-12"
