[package]
name = "core-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Functional core: all llms.txt generation logic + CLI program for one-offs (generation + update)."
build = "build.rs"
readme = "README.md"

[dependencies]
async-openai = { workspace = true }
tokio = { workspace = true }
common-ltx = { path = "../common-ltx" }
clap = { workspace = true }
url = { workspace = true }
markdown-ppp = { workspace = true }
indoc = { workspace = true }
nom = { workspace = true }
reqwest = { workspace = true }
html5ever = { workspace = true }
markup5ever_rcdom = { workspace = true }
async-trait = { workspace = true }
subst = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
test-with = { workspace = true }
libtest-with = { workspace = true }
