[package]
name = "core-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Functional core: all llms.txt generation logic + CLI program for one-offs (generation + update)."
build = "build.rs"
readme = "README.md"

[dependencies]
async-openai = { workspace = true }
axum-server = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
markdown-ppp = { workspace = true }
indoc = { workspace = true }
nom = { workspace = true }
reqwest = { workspace = true }
html5ever = { workspace = true }
markup5ever_rcdom = { workspace = true }
async-trait = { workspace = true }
subst = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# internal
data-model-ltx = { path = "../data-model-ltx" }

[dev-dependencies]
test-with = { workspace = true }
libtest-with = { workspace = true }
