[package]
name = "core-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Functional core: all llms.txt generation logic + CLI program for one-offs (generation + update)."

[dependencies]
async-openai = "0.28"
tokio = { version = "1.42", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["rt", "macros", "rt-multi-thread"] }
