[package]
name = "cron-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Cron worker service to perodically update websites' llms.txt."

[dependencies]
rustls = { workspace = true }
tokio = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
deadpool = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
url = { workspace = true }
core-ltx = { path = "../core-ltx" }
data-model-ltx = { path = "../data-model-ltx" }
