[package]
name = "data-model-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "The application's data model."

[features]
# Feature to enable test helper modules for use in other crates' tests
test-helpers = []

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
diesel = { workspace = true }
diesel-async = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = {workspace = true}
thiserror = {workspace = true}
uuid = { workspace = true }
deadpool = {workspace = true }

[dev-dependencies]
tokio = { workspace = true }
