[package]
name = "data-model-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "The application's data model."

[features]
# Feature to enable test helper modules for use in other crates' tests
test-helpers = ["libc"]

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
diesel = { workspace = true }
diesel-async = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = {workspace = true}
uuid = { workspace = true }
libc = { version = "0.2", optional = true }
# libc = { workspace = true }
# internal
core-ltx = { path = "../core-ltx" }

[dev-dependencies]
tokio = { workspace = true }
