[package]
name = "worker-ltx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Backend worker executing logic (generation + update) from API sever into database."

[dependencies]
axum = { workspace = true }
diesel = { workspace = true }
tokio = { workspace = true }
diesel-async = { workspace = true }
deadpool = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
core-ltx = { path = "../core-ltx" }
data-model-ltx = { path = "../data-model-ltx" }

[dev-dependencies]
# Enable test helpers from dependencies for testing
core-ltx = { path = "../core-ltx", features = ["test-helpers"] }
data-model-ltx = { path = "../data-model-ltx", features = ["test-helpers"] }
